--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme">
       <meta-data
-      android:name="com.google.android.geo.API_KEY"
+      android:name="com.google.android.maps.v2.API_KEY"
       android:value="AIzaSyDMRMvpc5prr45T8CEeJ82elSt7lWeWPBs"/>
       <activity
         android:name=".MainActivity"
